--- a/www/template-list.html
+++ b/www/template-list.html
@@ -1,11 +1,13 @@
 <div ng-controller="SectionListCtrl">
-<div class="topcoat-list list">
+    <button class="topcoat-button" onclick="location.href='/'">
+        reload the app
+    </button>
+    <div class="topcoat-list list">
         <h3 class="topcoat-list__header">(showing {{ sections.length }})</h3>
         <ul class="topcoat-list__container">
             <li ng-repeat="section in sections">
-                <a href="#{{ section.id }}">
-                    <h4>{{ section.name }}</h4>
-
+                <a href="#{{ section.fileName }}">
+                    <h4>{{ section.nameLong }}</h4>
                 </a>
             </li>
         </ul>
