changed the routing; parameters are passed through the url (after /#)

--- a/www/WebSql.html
+++ b/www/WebSql.html
@@ -7,7 +7,7 @@
         <h3 class="topcoat-list__header">{{ selectedSection.name }}</h3>
         <ul class="topcoat-list__container">
             <li>
-
+                WebSQL
             </li>
         </ul>
     </div>
