--- a/www/localStorage.html
+++ b/www/localStorage.html
@@ -4,10 +4,10 @@
             back
         </button>
 
-        <h3 class="topcoat-list__header">{{ selectedSection.name }}</h3>
+        <h3 class="topcoat-list__header">{{ selectedSection.nameLong }}</h3>
         <ul class="topcoat-list__container">
             <li>
-
+                LocalStorageCtrl
             </li>
         </ul>
     </div>
