--- a/www/index.html
+++ b/www/index.html
@@ -25,8 +25,8 @@
     <meta name="viewport"
           content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi"/>
     <script type="text/javascript" src="js/modernizr-latest.js"></script>
-    <script type="text/javascript" src="js/angular.min.js"></script>
-    <script type="text/javascript" src="js/angular-route.min.js"></script>
+    <script type="text/javascript" src="js/angularJS_1.2.18/angular.min.js"></script>
+    <script type="text/javascript" src="js/angularJS_1.2.18/angular-route.min.js"></script>
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 
