--- a/www/indexedDb.html
+++ b/www/indexedDb.html
@@ -4,7 +4,7 @@
             back
         </button>
 
-        <h3 class="topcoat-list__header">{{ selectedSection.name }}</h3>
+        <h3 class="topcoat-list__header">{{ selectedSection.nameLong }}</h3>
         <ul class="topcoat-list__container">
             <li>
                 Indexed DB
